# licenser

./: .gitignore  .gitmodules  .header  .licenserignore  .licenseronly  .licenserrc  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  azure-pipelines.yml  win-setup.iss
.github/ISSUE_TEMPLATE/: bug_report.md
src/: CommandLineArgs.hpp  LicenseWriter.cc  LicenseWriter.hpp  PreProcessor.hpp  main.cc
src/comments/: CMakeLists.txt
src/comments/include/: ADA.hpp  APPLESCRIPT.hpp  ASM.hpp  Base.hpp  C.hpp  CXX.hpp  CommentBuilder.hpp  Extensions.hpp  GO.hpp  HASKELL.hpp  HTML.hpp  JAVA.hpp  JAVASCRIPT.hpp  KOTLIN.hpp  LUA.hpp  MATLAB.hpp  OCAML.hpp  PERL.hpp  PHP.hpp  POWERSHELL.hpp  PYTHON.hpp  RUBY.hpp  RUST.hpp  SHELL.hpp  SQL.hpp  SWIFT.hpp  XML.hpp  YAML.hpp  all_lang.hpp
src/configmgr/: CMakeLists.txt
src/configmgr/include/: ConfigCommand.hpp  ConfigCustomHeader.hpp  ConfigIgnore.hpp  ConfigManager.hpp  ConfigOnly.hpp  ConfigParser.hpp  ConfigReader.hpp  ConfigWriter.hpp  RecursiveFileIterator.hpp
src/configmgr/src/: ConfigCommand.cc  ConfigCustomHeader.cc  ConfigIgnore.cc  ConfigManager.cc  ConfigOnly.cc  ConfigParser.cc  ConfigReader.cc  ConfigWriter.cc  RecursiveFileIterator.cc
src/licenses/: CMakeLists.txt  README.md
src/licenses/include/: AGPLv3.hpp  AL2.hpp  BSD2.hpp  BSD3.hpp  BSL1.hpp  CC0_1.hpp  CC_BY_3.hpp  CC_BY_4.hpp  CC_BY_NC_3.hpp  CC_BY_NC_4.hpp  CC_BY_NC_ND_3.hpp  CC_BY_NC_ND_4.hpp  CC_BY_NC_SA_3.hpp  CC_BY_NC_SA_4.hpp  CC_BY_ND_3.hpp  CC_BY_ND_4.hpp  CC_BY_SA_3.hpp  CC_BY_SA_4.hpp  GPLv2.hpp  GPLv3.hpp  LGPLv3.hpp  License.hpp  LicenseType.hpp  MIT.hpp  MPLv2.hpp  WTFPL.hpp  ZLIB.hpp  all_license.hpp
src/licenses/src/: AGPLv3.cc  AL2.cc  BSD2.cc  BSD3.cc  BSL1.cc  CC0_1.cc  CC_BY_3.cc  CC_BY_4.cc  CC_BY_NC_3.cc  CC_BY_NC_4.cc  CC_BY_NC_ND_3.cc  CC_BY_NC_ND_4.cc  CC_BY_NC_SA_3.cc  CC_BY_NC_SA_4.cc  CC_BY_ND_3.cc  CC_BY_ND_4.cc  CC_BY_SA_3.cc  CC_BY_SA_4.cc  GPLv2.cc  GPLv3.cc  LGPLv3.cc  License.cc  MIT.cc  MPLv2.cc  WTFPL.cc  ZLIB.cc
src/licensewriter/: CMakeLists.txt
src/licensewriter/include/: LicenseWriter.hpp
src/licensewriter/src/: LicenseWriter.cc
src/utility/: ArchInfo.hpp  CLI.hpp  CommandLineArgs.hpp  PathUtility.hpp  PreProcessor.hpp  SigHandlers.hpp  SubcommandMode.hpp  Util.hpp
src/writer/: CMakeLists.txt
src/writer/include/: HeaderExtractor.hpp  HeaderParser.hpp  HeaderRemover.hpp  HeaderWriter.hpp  LicenseWriter.hpp
src/writer/src/: HeaderWriter.cc  LicenseWriter.cc
tests/configmgr/: CMakeLists.txt  configparser.cc
tests/preprocessor/: CMakeLists.txt  parse.cc  remove_placeholder.cc
